updates made to front-end photo, svg logo placeholder, footer, div containers added to fix spacing issues, and nav-bar color

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,3 +1,9 @@
+.logo {
+  width: 30px;
+  height: 29px;
+  border: 0;
+}
+
 .navbar-fixed-top { border:0; }
 
 .product_single{
